--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rajdhani:wght@400;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 *{
   margin: 0;
@@ -17,11 +22,13 @@
   
   --color-blue: #007BFF;       
   --color-yellow: gold;     
-  --color-grayBlack: #2E2E3A;
+  --color-grayBlack: #0d0c22;
   --color-green: #70e000;      
   --color-white: white;      
   --color-red: #FF4500;   
   --color-purple: #6f42c1; 
+  --color-rose: #FF6EC7;
+  --color-blueDark: #0d0c22;
   
   
   --color-background: white;
@@ -44,19 +51,17 @@ body{
   padding: 0 3rem;
   height: 80px;
   display: grid;
-  background-color: white;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
   position: fixed;
+  gap: 35px;
   width: 100%;
-  border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 
 .header__logo .header__title {
-  font-size: 3.5em;
-  color: var(--color-blue);
-  background: linear-gradient(90deg, #007BFF, var(--color-green));
+  font-size: 3em;
+  background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -67,220 +72,55 @@ body{
 .navbar{
 
   height: 100%;
-  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
   
 }
 
-.nav__dropdown{
-  position: relative;
+.info{
+  display: flex;
+  gap: 35px;
 }
 
-.navbar .nav__links{
-  display: flex;
-  align-items: center;
-  gap: 70px;
-  height: 100%;
+.info a{
+  font-family: 'Raleway', sans-serif;
   font-size: 1em;
+  font-weight: Bold;
   color: var(--color-grayBlack);
-  font-weight: bold;
+  transition: .2s ease;
 }
 
+.info a:hover{
+  color: var(--color-rose)
+}
 
-.navbar .nav__links li{
+.register__section{
   display: flex;
-  align-items: center;
+  justify-content: end;
+  gap: 15px;
 }
 
-#nav__link{
-  position: relative;
-  font-family: 'Raleway';
-  display: flex;
-  align-items: center;
-  color: var(--color-grayBlack);
-}
-
-  
-
-
-
-
-
-.navbar .nav__dropdown-menu{
-  display: flex;
-  flex-direction: column;
-  opacity: 0;
-  position: absolute;
-  background-color: var(--color-grayBlack);
-  border-radius: .5rem;
-  top: 40px;
-  left: 30px;
-  transition: .3s ease;
-  z-index: 999;
-}
-
-
-.navbar .nav__dropdown-menu li{
-  padding: 1rem 1.25rem;
-  background-color: transparent;
-  transition: .3s ease;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-
-}
-
-.navbar .nav__dropdown-menu li:nth-child(1){
-  background-color: transparent;
-  border-top-left-radius: .5em;
-  border-top-right-radius: .5em;
-}
-
-.navbar .nav__dropdown-menu li:nth-child(1) img{
-  height: auto;
-  width: 30px;
-}
-
-.navbar .nav__dropdown-menu li:nth-child(2) img{
-  height: auto;
-  width: 30px;
-}
-
-.navbar .nav__dropdown-menu li:nth-child(3) img{
-  height: auto;
-  width: 30px;
-}
-
-.navbar .nav__dropdown-menu li:nth-child(4) img{
-  height: auto;
-  width: 30px;
-}
-
-
-
-.navbar .nav__dropdown-menu li:nth-child(1):hover{
-  background: rgba(0,0,0,.2);
-}
-
-.navbar .nav__dropdown-menu li:nth-child(2):hover{
-  background-color: rgba(0,0,0,.2)
-}
-
-.navbar .nav__dropdown-menu li:nth-child(3):hover{
-  background-color: rgba(0,0,0,.2)
-}
-
-
-.navbar .nav__dropdown-menu li:nth-child(4){
-  background-color: transparent;
-  border-bottom-left-radius: .5em;
-  border-bottom-right-radius: .5em;
-}
-
-.navbar .nav__dropdown-menu li:nth-child(4):hover{
-  background-color: rgba(0,0,0,.2)
-}
-
-.navbar .nav__dropdown-menu .dropdown__link{
-  font-family: 'Raleway';
-  color: var(--color-white);
-  font-size: 1.1em;
-  font-weight: 500;
-}
-
-.nav__dropdown #nav__dropdown__link{
+.register__section .btn__login{
+  font-family: 'Poppins';
   font-size: 1em;
-  color: var(--color-grayBlack);
-  font-family: 'Raleway';
-  display: flex;
-  align-items: center;
-  position: relative;
-  gap: 10px;
-
-}
-
-
-
-
-
-.home{
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.home__icon{
-  height: auto;
-  width: 20px;
-  position: relative;
-  top: -3px;
-}
-
-
-
-
-.nav__dropdown #nav__dropdown__link #arrow__img{
-  height: auto;
-  display: flex;
-  align-self: baseline;
-  width: 15px;
-  rotate: 90deg;
-  transition: .3s ease;
-  position: relative;
-}
-
-
-
-
-
-
-
-.nav__register{
-  justify-self: end;
-  display: flex;
-  gap: 1.5em;
-}
-
-
-
-.nav__register .btn__register__login{
-  font-family: 'Raleway';
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  justify-content: center;
-  padding: 10px 1.5em;
-  border-radius: 4px;
-  font-weight: bold;
-  font-size: 1em;
-  background: var(--color-blue);
+  background-color: var(--color-blue);
   color: white;
-  transition: .1s ease-in-out;
+  font-weight: semi-bold;
+  padding: 10px 40px;
+  border-radius: 2.1em;
 }
 
-.nav__register .btn__register__login:hover{
-  transform: translateY(-3px)
-}
-
-.nav__register .btn__register__signup{
-  font-family: 'Raleway';
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  justify-content: center;
-  padding: 10px 1.5em;
-  border-radius: 4px;
-  font-weight: bold;
+.register__section .btn__signup{
+  font-family: 'Poppins', sans-serif;
   font-size: 1em;
-  background: var(--color-green);
+  background-color: var(--color-green);
   color: white;
-  transition: .1s ease-in-out;
+  font-weight: semi-bold;
+  padding: 10px 50px;
+  border-radius: 2.1em;
 }
-
-.nav__register .btn__register__signup:hover{
-  transform: translateY(-3px)
-}
-
-
 
 
  
@@ -288,180 +128,73 @@ body{
 
 .homepage{
   height: 100%;
-  padding-top: 80px;
 }
 
 .homepage .homepage__hero{
-  height: 30%;
+  height: 100%;
+  padding: 0 4rem;
   display: flex;
+  align-items: center;
   justify-content: center;
   width: 100%;
 }
 
 .homepage__hero__content{
   display: flex;
-  margin-top: 130px;
-  flex-direction: column;
   justify-content: center;
+  flex-direction: column;
   gap: 15px;
   align-items: center;
 }
 
+
+
 .homepage .homepage__title{
-  font-size: 4.75rem;
-  font-family: 'Raleway';
+  font-size: 8rem;
+  font-family: 'Raleway', sans-serif;
+  line-height: 1;
+
+  text-align: left;
   color: var(--color-grayBlack);
 }
 
+
+
 .homepage .homepage__title span{
-  background: linear-gradient(90deg, #007BFF, #6f42c1);
+  background: linear-gradient(90deg, var(--color-blue), var(--color-green));
+  font-family: 'Dancing Script', cursive;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
+.homepage__info{
+  display: flex;
+  flex-direction: column;
+}
 .homepage .homepage__subtitle{
-  font-size: 1.5rem;
-  font-family: 'Raleway';
-  color: var(--color-grayBlack);
+  font-size: 1.6rem;
+  font-family: 'Poppins';;
+  color: var(--color-blueDark);
 }
 
 .homepage .homepage__button{
-  font-size: 1.2em;
-  font-weight: bold;
-  border-radius: 30px;
-  background: var(--color-blue);
+  font-size: 1.4em;
+  font-weight: semi-bold;
+  border-radius: .5em;
+  background: var(--color-rose);
   margin-top: 20px;
   color: var(--color-white);
-  box-shadow: 0 5px 0 rgba(0,123,255,.65);
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: .5s ease;
-  padding: 17px 30px;
   cursor: pointer;
-  font-size: 1.3em;
-  font-family: 'Raleway';
+  padding: 0.7em 2rem;
+  font-family: 'Poppins', sans-serif;
   color: var(--color-white);
 }
 
 
-
-
-
-
-
-.quiz__spotlight {
-  height: 70vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; 
-  padding: 20px;
-}
-
-.quiz__spotlight .quiz__spotlight__header {
-  font-size: 3.75rem;
-  text-align: center;
-  font-family: 'Raleway';
-  background: linear-gradient(90deg, var(--color-blue), #ff6ec7);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 40px;
-}
-
-.quiz__spotlight__content {
-  display: flex;
-  gap: 50px;
-  margin-top: 25px;
-
-  
-}
-
-.quiz__box {
-  width: 500px;
-  height: 300px;
-  border-radius: 3rem;
-  padding: 5px 5px;
-  color: white;
-  font-size: 1.2rem;
-  background-color: white;
-  transition: .3s ease;
-  position: relative;
-  z-index: initial;
-  background: var(--color-blue)
-}
-
-
-
-
-.box__content{
-  padding: 1em 1.3em;
-  display: flex;
-  background-color: rgba(255,255,255,.1);
-  border-radius: 3rem;
-}
-
-.info{
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-.box__content p{
-  font-family: 'Raleway';
-  font-size: 1.1em;
-  font-weight:500;
-  color: var(--color-white)
-}
-
-.box__content .questions__quantity span{
-  font-family: 'Raleway';
-  font-weight: bold;
-  color: var(--color-white);
-}
-
-.box__content .quiz__difficulty{
-  font-family: 'Raleway';
-  font-weight: bold;
-}
-
-.box__content h3{
-  font-size: 1.4em;
-  color: var(--color-white);
-}
-
-.box__content .title{
-  font-family: 'Raleway';
-}
-
-.btn__quiz{
-  height: 60px;
-  width: 250px;
-  border-radius: .7em;
-  margin-top: 12px;
-  outline: none;
-  border: 2px solid rgba(255,255,255,.3);
-  font-family: 'Raleway';
-  font-size: 1.1em;
-  font-weight: bold;
-  background: var(--color-green);
-  box-shadow: 0 5px 0 rgba(112,224,65,.65);
-  color: white;
-  transition: .1s ease;
-  position: relative;
-
-}
-
-
-
-
-
-.btn__quiz:hover{
-  cursor: pointer;
-  transform: translateY(-3px);
-
-}
 
 @media (max-width: 1750px) {
   .header{
@@ -469,7 +202,7 @@ body{
   }
 
   .header__logo .header__title{
-    font-size: 3rem;
+    font-size: 3.5rem;
   }
 
   .navbar .nav__links{
@@ -477,46 +210,19 @@ body{
   }
 
 
-  .homepage .homepage__hero{
-    height: 35%;
-  }
 
 
   .homepage__hero .homepage__title{
-    font-size: 3.75rem;
+    font-size: 4rem;
   }
 
   .homepage__hero .homepage__subtitle{
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 
   .homepage__hero .homepage__button{
-    padding: 15px 1.5rem;
+    padding: 17px 1.7rem;
 
-  }
-
-  .quiz__spotlight .quiz__spotlight__header{
-    font-size: 2.75rem;
-  }
-  
-  .quiz__spotlight {
-    margin-top: 50px;
-    height: 100vh;
-  }
-
-  .quiz__box {
-    height: 300px;
-    width: 400px;
-  }
-
-  .box__content h3{
-    font-size: 1.1em;
-  }
-
-
-
-  .box__content p{
-    font-size: 1em;
   }
 }
 
