--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rajdhani:wght@400;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Quicksand:wght@300..700&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 
 *{
   margin: 0;
@@ -16,19 +19,19 @@
   list-style: none;
   outline: none;
   font-family: 'Dancing Script', cursive;
+  outline: none;
 }
 
 :root {
   
   --color-blue: #007BFF;       
   --color-yellow: gold;     
-  --color-grayBlack: #0d0c22;
+  --color-blueDark: #0d0c22;
   --color-green: #70e000;      
   --color-white: white;      
   --color-red: #FF4500;   
   --color-purple: #6f42c1; 
   --color-rose: #FF6EC7;
-  --color-blueDark: #0d0c22;
   
   
   --color-background: white;
@@ -48,20 +51,23 @@ body{
 
 
 .header{
-  padding: 0 3rem;
+  padding: 0rem 10rem;
   height: 80px;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
+  justify-self: center;
   align-items: center;
   position: fixed;
   gap: 35px;
   width: 100%;
+  background-color: var(--color-white);
 }
 
 
 .header__logo .header__title {
   font-size: 3em;
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
+  font-family: 'Dancing Script', cursive;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -85,15 +91,41 @@ body{
 }
 
 .info a{
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Mona Sans', sans-serif;
   font-size: 1em;
-  font-weight: Bold;
-  color: var(--color-grayBlack);
-  transition: .2s ease;
+  font-weight: 600;
+  color: var(--color-blueDark);
+  transition: .25s ease;
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
 
 .info a:hover{
   color: var(--color-rose)
+}
+
+.info a img{
+  height: auto;
+  width: 16px;
+  filter: invert(100%);
+}
+
+.info a .icon__wrapper{
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.icon__wrapper::after{
+  content: '';
+  position: absolute;
+  inset: -5px;
+  border-radius: 60%;
+  background-color: var(--color-rose);
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
+  z-index: -1;
 }
 
 .register__section{
@@ -103,23 +135,34 @@ body{
 }
 
 .register__section .btn__login{
-  font-family: 'Poppins';
+  font-family: 'Mona Sans',sans-serif;
   font-size: 1em;
   background-color: var(--color-blue);
   color: white;
-  font-weight: semi-bold;
+  font-weight: 600;
   padding: 10px 40px;
   border-radius: 2.1em;
+  box-shadow: 0 3px #0056b3, 0 4px #004080, 0 5px #00294d;
 }
 
+.register__section .btn__login:hover{
+  filter: brightness(.9);
+}
+
+
 .register__section .btn__signup{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Mona Sans', sans-serif;
   font-size: 1em;
   background-color: var(--color-green);
   color: white;
-  font-weight: semi-bold;
+  font-weight: 600;
+  box-shadow: 0 3px #55b300, 0 4px #3d8000, 0 5px #2a5500;
   padding: 10px 50px;
   border-radius: 2.1em;
+}
+
+.register__section .btn__signup:hover{
+  filter: brightness(.9);
 }
 
 
@@ -128,6 +171,7 @@ body{
 
 .homepage{
   height: 100%;
+  display: relative;
 }
 
 .homepage .homepage__hero{
@@ -155,12 +199,13 @@ body{
   line-height: 1;
 
   text-align: left;
-  color: var(--color-grayBlack);
+  color: var(--color-blueDark);
 }
 
 
 
 .homepage .homepage__title span{
+  font-size: 7.5rem;
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
@@ -179,7 +224,7 @@ body{
 
 .homepage .homepage__button{
   font-size: 1.4em;
-  font-weight: semi-bold;
+  font-weight: 600;
   border-radius: .5em;
   background: var(--color-rose);
   margin-top: 20px;
@@ -190,9 +235,73 @@ body{
   justify-content: center;
   cursor: pointer;
   padding: 0.7em 2rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Mona Sans', sans-serif;
   color: var(--color-white);
+  box-shadow: 0 3px #c553a5, 0 4px #a33b87, 0 5px #812f6f;
+  transition: .1s ease;
 }
+
+.homepage .homepage__button:hover{
+  filter: brightness(.9);
+}
+
+
+
+.features{
+  height: 100vh;
+}
+
+.features__header{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.features__header .features__title{
+  font-size: 3.5rem;
+  font-family: 'Raleway', sans-serif;
+  color: var(--color-blueDark);
+}
+
+.features__header .features__subtitle{
+  font-size: 1.2rem;
+  font-family: 'Poppins', sans-serif;
+  color: var(--color-blueDark);
+}
+
+.features__header .features__label{
+  font-size: 1em;
+  font-family: 'Mona Sans', sans-serif;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: -1;
+  
+}
+
+.features__header .features__label::after{
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  width: 60px;
+  height: 4px;
+  background: var(--color-rose);
+  border-radius: 2px;
+  z-index: -1;
+
+}
+
+.features__grid{
+  margin-top: 3rem;
+  width: 1300px;
+  justify-self: center;
+  height: 650px;
+  background: radial-gradient(circle, var(--color-blue), var(--color-green));
+  border-radius: 1.8em;
+}
+
+
 
 
 
@@ -202,7 +311,7 @@ body{
   }
 
   .header__logo .header__title{
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
 
   .navbar .nav__links{
