--- a/src/style.css
+++ b/src/style.css
@@ -91,9 +91,7 @@ body{
 
 .info{
   display: flex;
-  gap: 35px;
-  background-color: var(--color-blueDark);
-  padding: 15px 3rem;
+  gap: 50px;
   border-radius: 1.8em;
   z-index: inherit;
 }
@@ -102,40 +100,31 @@ body{
   font-family: 'Mona Sans', sans-serif;
   font-size: 16px;
   font-weight: 600;
-  color: var(--color-white);
+  color: var(--color-blueDark);
   transition: .25s ease;
-  display: flex;
-  gap: 16px;
-  align-items: center;
-}
-
-.info a:hover{
-  color: var(--color-rose)
-}
-
-.info a img{
-  height: auto;
-  width: 16px;
-  filter: invert(100%);
-}
-
-.info a .icon__wrapper{
   display: flex;
   align-items: center;
   position: relative;
-  z-index: inherit;
 }
 
-.icon__wrapper::after{
+.info a::after{
   content: '';
   position: absolute;
-  inset: -5px;
-  border-radius: 60%;
+  width: 0%;
+  height: 2px;
   background-color: var(--color-rose);
-  width: calc(100% + 10px);
-  height: calc(100% + 10px);
-  z-index: -1;
+  bottom: -6px;
+  border-radius: 5px;
+  transition: width .3s ease;
 }
+
+.info a:hover::after{
+  width: 100%;
+}
+
+
+
+
 
 .register__section{
   display: flex;
@@ -313,7 +302,7 @@ body{
 
 
 .features{
-  height: 100vh;
+  height: 120vh;
 }
 
 .features__header{
@@ -381,7 +370,18 @@ body{
 }
 
 
+.feature1{
+  grid-row: span 2; /* Ocupa 2 filas */
+}
 
+.feature2{
+  grid-column: span 2; /* Ocupa 2 columnas */
+}
+
+
+.feature5{
+  grid-column: span 2; /* Ocupa 2 columnas */
+}
 
 
 
