--- a/src/style.css
+++ b/src/style.css
@@ -51,23 +51,24 @@ body{
 
 
 .header{
-  padding: 0rem 12rem;
-  height: 80px;
+  padding: 0rem 192px;
+  height: 72px;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   justify-self: center;
   align-items: center;
   position: fixed;
+  background-color: rgba(255,255,255,.7);
+  backdrop-filter: blur(5px);
   gap: 35px;
   width: 100%;
   z-index: 999 !important;
-  background-color: var(--color-white);
-  border-bottom: 1px solid rgba(0,0,0,0.1);
+  
 }
 
 
 .header__logo .header__title {
-  font-size: 3em;
+  font-size: 2.5em;
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
@@ -91,7 +92,7 @@ body{
 
 .info{
   display: flex;
-  gap: 50px;
+  gap: 48px;
   border-radius: 1.8em;
   z-index: inherit;
 }
@@ -103,6 +104,7 @@ body{
   color: var(--color-blueDark);
   transition: .25s ease;
   display: flex;
+  letter-spacing: -0.01em;
   align-items: center;
   position: relative;
 }
@@ -111,11 +113,11 @@ body{
   content: '';
   position: absolute;
   width: 0%;
-  height: 2px;
+  height: 3px;
   background-color: var(--color-rose);
-  bottom: -6px;
-  border-radius: 5px;
-  transition: width .3s ease;
+  bottom: -8px;
+  border-radius: 8px;
+  transition: width .35s ease;
 }
 
 .info a:hover::after{
@@ -129,76 +131,51 @@ body{
 .register__section{
   display: flex;
   justify-content: end;
-  gap: 15px;
+  gap: 16px;
 }
+
+
 
 .register__section .btn__login{
   font-family: 'Mona Sans',sans-serif;
   font-size: 16px;
-  background-color: var(--color-blue);
+  background-color: var(--color-blueDark);
   color: white;
+  display: flex;
+  align-items: center;
   font-weight: 600;
-  padding: 10px 40px;
+  padding: 8px 40px;
   border-radius: 2.1em;
-  box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 2px 0 0 #60A5FA,   
-    0 4px 0 0 #3B82F6,  
-    0 6px 0 0 #2563EB,   
-    0 8px 0 0 #1D4ED8,   
-    0 8px 16px 0 rgba(59, 130, 246, 0.5);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  will-change: transform, box-shadow; 
-  transition: transform .2s ease, box-shadow .2s ease;
+  will-change: brightness;
+  transition: .15s ease;
 }
 
 .register__section .btn__login:hover{
-  transform: translateY(4px);
-   box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 1px 0 0 #60A5FA,
-    0 2px 0 0 #3B82F6,
-    0 3px 0 0 #2563EB,
-    0 4px 0 0 #1D4ED8,
-    0 4px 8px 0 rgba(59,130,246,0.5);
+  background-color: var(--color-rose);
 }
 
 
 .register__section .btn__signup{
   font-family: 'Mona Sans', sans-serif;
   font-size: 16px;
-  background-color: var(--color-green);
+  background-color: var(--color-blueDark);
   color: white;
   font-weight: 600;
-  box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 2px 0 0 #4ADE80,   
-    0 4px 0 0 #22C55E,   
-    0 6px 0 0 #16A34A,  
-    0 8px 0 0 #15803D,   
-    0 8px 16px 0 rgba(34, 197, 94, 0.5); 
-  padding: 10px 50px;
+  padding: 8px 48px;
   border-radius: 2.1em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   will-change: transform, box-shadow; 
-  transition: transform .2s ease, box-shadow .2s ease;
+  transition: .15s ease;
 }
 
 .register__section .btn__signup:hover{
-  transform: translateY(4px);
-   box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 1px 0 0 #4ADE80,
-    0 2px 0 0 #22C55E,
-    0 3px 0 0 #16A34A,
-    0 4px 0 0 #15803D,
-    0 4px 8px 0 rgba(34,197,94,0.5);
+  background-color: var(--color-rose);
 }
-
 
 
 
@@ -212,7 +189,7 @@ body{
 
 .homepage .homepage__hero{
   height: 100%;
-  padding: 0 4rem;
+  padding: 0 64px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -223,14 +200,14 @@ body{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  gap: 15px;
+  gap: 16px;
   align-items: center;
 }
 
 
 
 .homepage .homepage__title{
-  font-size: 8rem;
+  font-size: 128px;
   font-family: 'Raleway', sans-serif;
   line-height: 1;
 
@@ -241,7 +218,7 @@ body{
 
 
 .homepage .homepage__title span{
-  font-size: 7.5rem;
+  font-size: 120px;
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
@@ -253,24 +230,24 @@ body{
   flex-direction: column;
 }
 .homepage .homepage__subtitle{
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-family: 'Poppins';;
   color: var(--color-blueDark);
 }
 
 .homepage .homepage__button{
-  font-size: 1.4em;
+  font-size: 1.5em;
   font-weight: 600;
-  border-radius: 1.8em;
+  border-radius: 40px;
   background: var(--color-rose);
-  margin-top: 20px;
+  margin-top: 24px;
   color: var(--color-white);
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  padding: 0.7em 2rem;
+  padding: 16px 2rem;
   font-family: 'Mona Sans', sans-serif;
   color: var(--color-white);
   box-shadow:
@@ -309,23 +286,23 @@ body{
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 8px;
 }
 
 .features__header .features__title{
-  font-size: 3.5rem;
+  font-size: 56px;
   font-family: 'Raleway', sans-serif;
   color: var(--color-blueDark);
 }
 
 .features__header .features__subtitle{
-  font-size: 1.2rem;
+  font-size: 18px;
   font-family: 'Poppins', sans-serif;
   color: var(--color-blueDark);
 }
 
 .features__header .features__label{
-  font-size: 1em;
+  font-size: 16px;
   font-family: 'Mona Sans', sans-serif;
   display: flex;
   justify-content: center;
@@ -357,15 +334,15 @@ body{
   margin: 0 auto;
   margin-top: 3rem;
   gap: 1.8rem; 
-  padding: 2rem;
+  padding: 32px;
 }
 
 .feature {
   background-color: rgba(255,255,255,.1);
   border: 1px solid rgba(255,255,255,.2);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
-  border-radius: 1.8em;
-  display: flex;               /* para ver texto centrado */
+  border-radius: 28px;
+  display: flex;               
   color: white;
   position: relative;
   font-weight: bold;
@@ -392,8 +369,8 @@ body{
   grid-row: span 2; /* Ocupa 2 filas */
   display: flex;
   flex-direction: column;
-  padding: 2rem 2rem;
-  gap: 45px;
+  padding: 32px 32px;
+  gap: 48px;
 }
 
 .feature1 img{
@@ -444,34 +421,65 @@ body{
 .feature2 .feature__info{
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  padding: 4rem 2rem;
+  gap: 8px;
+  padding: 64px 32px;
   width: 60%;
 }
 
 .feature3{
   display: flex;
   flex-direction: column;
-  padding: 1rem 2rem;
+  padding: 16px 32px;
 }
 
 .feature4{
   display: flex;
   flex-direction: column;
-  padding: 1rem 2rem;
+  padding: 16px 32px;
 }
 
 .feature4 img{
   display: flex;
-  justify-content: center;
+  position: absolute;
+  top: -185%;
+  left: 50%;
+  transform: translate(-50%,185%);
   width: 300px;
 }
 
 .feature5{
-  grid-column: span 2; /* Ocupa 2 columnas */
+  grid-column: span 2;
+  padding: 64px 32px;
+  gap: 32px;
 }
 
+.feature5 .feature__info{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 60%;
+}
 
+.feature5 img{
+  width: 250px;
+  height: 250px;
+  display: flex;
+  align-self: center;
+}
+
+.feature6{
+  display: flex;
+  flex-direction: column;
+  padding: 16px 32px;
+}
+
+.feature6 img{
+  height: auto;
+  width: 200px;
+  margin-top: 8px;
+  display: flex;
+  align-self: center;
+}
 
 
 
