--- a/src/style.css
+++ b/src/style.css
@@ -231,7 +231,7 @@ body{
 }
 .homepage .homepage__subtitle{
   font-size: 1.5rem;
-  font-family: 'Poppins';;
+  font-family: 'Mona Sans';;
   color: var(--color-blueDark);
 }
 
@@ -329,7 +329,9 @@ body{
   grid-template-columns: repeat(3, 1fr); 
   grid-auto-rows: 250px;
   background: var(--color-blueDark);
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 25px var(--color-blue),
+              0 0 50px var(--color-green);
+  border: 1px solid rgba(255,255,255,.5);
   border-radius: 1.8em;
   margin: 0 auto;
   margin-top: 3rem;
@@ -482,8 +484,72 @@ body{
 }
 
 
+.unlucked__features__dashboard{
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  margin-top: 56px;
+  gap: 24px;
+}
 
+.dashboard__info{
+  background-color: var(--color-blueDark);
+  padding: 8px 24px;
+  border-radius: 32px;
+}
 
+.dashboard__info p{
+  font-size: 1.125rem;
+  font-weight: 600;
+  color: var(--color-white);
+  font-family: 'Mona Sans', sans-serif;
+}
+
+.unlucked__features__dashboard .create__account__btn{
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 40px;
+  background: var(--color-rose);
+  width: 250px;
+  color: var(--color-white);
+  border: none;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 16px 2rem;
+  font-family: 'Mona Sans', sans-serif;
+  color: var(--color-white);
+  box-shadow:
+    inset 0 1px 0 0 rgba(255,255,255,0.4),
+    0 2px 0 0 var(--color-rose),
+    0 4px 0 0 #FF1E50,
+    0 6px 0 0 #FF7A95,
+    0 8px 0 0 #FF6B88,
+    0 8px 16px 0 rgba(255, 77, 109, 0.5);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+
+  will-change: transform, box-shadow; 
+  transition: transform .2s ease, box-shadow .2s ease;
+}
+
+.unlucked__features__dashboard .create__account__btn:hover{
+  transform: translateY(4px);
+   box-shadow:
+    inset 0 1px 0 0 rgba(255,255,255,0.4),
+    0 1px 0 0 var(--color-rose),
+    0 2px 0 0 #FF1E50,
+    0 3px 0 0 #FF7A95,
+    0 4px 0 0 #FF6B88,
+    0 4px 8px 0 rgba(255,77,109,0.5);
+}
+
+.contact{
+  height: 100vh;
+}
 
 
 @media (max-width: 1750px) {
