--- a/src/style.css
+++ b/src/style.css
@@ -51,15 +51,14 @@ body{
 
 
 .header{
-  padding: 0rem 192px;
-  height: 72px;
+  padding: 0rem 272px;
+  height: 64px;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   justify-self: center;
   align-items: center;
   position: fixed;
-  background-color: rgba(255,255,255,.7);
-  backdrop-filter: blur(5px);
+  background-color: var(--color-white);
   gap: 35px;
   width: 100%;
   z-index: 999 !important;
@@ -99,7 +98,7 @@ body{
 
 .info a{
   font-family: 'Mona Sans', sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 600;
   color: var(--color-blueDark);
   transition: .25s ease;
@@ -138,7 +137,7 @@ body{
 
 .register__section .btn__login{
   font-family: 'Mona Sans',sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   background-color: var(--color-blueDark);
   color: white;
   display: flex;
@@ -160,7 +159,7 @@ body{
 
 .register__section .btn__signup{
   font-family: 'Mona Sans', sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   background-color: var(--color-blueDark);
   color: white;
   font-weight: 600;
@@ -210,7 +209,8 @@ body{
   font-size: 128px;
   font-family: 'Raleway', sans-serif;
   line-height: 1;
-
+  gap: 24px;
+  display: flex;
   text-align: left;
   color: var(--color-blueDark);
 }
@@ -218,7 +218,8 @@ body{
 
 
 .homepage .homepage__title span{
-  font-size: 120px;
+  font-size: 125px;
+  align-self: center;
   background: linear-gradient(90deg, var(--color-blue), var(--color-green));
   font-family: 'Dancing Script', cursive;
   background-clip: text;
@@ -329,8 +330,7 @@ body{
   grid-template-columns: repeat(3, 1fr); 
   grid-auto-rows: 250px;
   background: var(--color-blueDark);
-  box-shadow: 0 0 25px var(--color-blue),
-              0 0 50px var(--color-green);
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.5);
   border: 1px solid rgba(255,255,255,.5);
   border-radius: 1.8em;
   margin: 0 auto;
@@ -368,7 +368,7 @@ body{
 
 
 .feature1{
-  grid-row: span 2; /* Ocupa 2 filas */
+  grid-row: span 2; 
   display: flex;
   flex-direction: column;
   padding: 32px 32px;
@@ -416,7 +416,7 @@ body{
 }
 
 .feature2{
-  grid-column: span 2; /* Ocupa 2 columnas */
+  grid-column: span 2; 
   display: flex;
 }
 
@@ -484,72 +484,76 @@ body{
 }
 
 
-.unlucked__features__dashboard{
-  display: flex;
-  flex-direction: column;
-  justify-self: center;
-  margin-top: 56px;
-  gap: 24px;
-}
-
-.dashboard__info{
-  background-color: var(--color-blueDark);
-  padding: 8px 24px;
-  border-radius: 32px;
-}
-
-.dashboard__info p{
-  font-size: 1.125rem;
-  font-weight: 600;
-  color: var(--color-white);
-  font-family: 'Mona Sans', sans-serif;
-}
-
-.unlucked__features__dashboard .create__account__btn{
-  font-size: 1.25rem;
-  font-weight: 600;
-  border-radius: 40px;
-  background: var(--color-rose);
-  width: 250px;
-  color: var(--color-white);
-  border: none;
-  display: flex;
-  align-items: center;
-  align-self: center;
-  justify-content: center;
-  cursor: pointer;
-  padding: 16px 2rem;
-  font-family: 'Mona Sans', sans-serif;
-  color: var(--color-white);
-  box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 2px 0 0 var(--color-rose),
-    0 4px 0 0 #FF1E50,
-    0 6px 0 0 #FF7A95,
-    0 8px 0 0 #FF6B88,
-    0 8px 16px 0 rgba(255, 77, 109, 0.5);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-
-  will-change: transform, box-shadow; 
-  transition: transform .2s ease, box-shadow .2s ease;
-}
-
-.unlucked__features__dashboard .create__account__btn:hover{
-  transform: translateY(4px);
-   box-shadow:
-    inset 0 1px 0 0 rgba(255,255,255,0.4),
-    0 1px 0 0 var(--color-rose),
-    0 2px 0 0 #FF1E50,
-    0 3px 0 0 #FF7A95,
-    0 4px 0 0 #FF6B88,
-    0 4px 8px 0 rgba(255,77,109,0.5);
-}
 
 .contact{
-  height: 100vh;
+  height: 120vh;
 }
+
+.contact__header{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.contact__header .contact__title{
+  font-size: 56px;
+  font-family: 'Raleway', sans-serif;
+  color: var(--color-blueDark);
+}
+
+.contact__header .contact__label{
+  font-size: 16px;
+  font-family: 'Mona Sans', sans-serif;
+  display: flex;
+  font-weight: bold;
+  justify-content: center;
+  position: relative;
+  z-index: -1;
+  
+}
+
+.contact__header .contact__label::after{
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  width: 60px;
+  height: 4px;
+  background: var(--color-rose);
+  border-radius: 2px;
+  z-index: -1;
+
+}
+
+.contact__container{
+  display: flex;
+  width: 1400px;
+  height: 800px;
+  margin: 0 auto;
+  background-color: var(--color-white);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+  margin-top: 32px;
+  border-radius: 1.8rem;
+}
+
+.contact__container .main__contact__img{
+  width: 50%;
+}
+
+.contact__container .main__contact__img .contact__img__title{
+  display: flex;
+  flex-direction: column;
+  padding-left: 64px;
+  justify-content: center;
+  height: 100%;
+}
+
+.contact__container .main__contact__img h1{
+  font-family: 'Poppins';
+  font-size: 64px;
+}
+
+
 
 
 @media (max-width: 1750px) {
