--- a/src/style.css
+++ b/src/style.css
@@ -568,7 +568,8 @@ body{
 
 .contact__container .contact__form{
   padding-top: 64px;
-  padding-left: 48px;
+  padding-left: 40px;
+  padding-right: 40px;
   width: 40%;
   border-top-right-radius: 1.8rem;
   border-bottom-right-radius: 1.8rem;
@@ -579,6 +580,68 @@ body{
   font-size: 56px;
   color: var(--color-blueDark);
   font-family: 'Poppins';
+  margin-bottom: 56px;
+}
+
+
+.contact-groups{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.input__group1{
+  display: flex;
+  gap: 24px;
+}
+
+.input__group1 .input1{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.input__group1 .input1 label{
+  color: var(--color-blueDark);
+  font-family: 'Mona Sans';
+  font-weight: 600;
+}
+
+.input__group1 .input2{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.input__group1 .input2 label{
+  color: var(--color-blueDark);
+  font-family: 'Mona Sans';
+  font-weight: 600;
+}
+
+
+.input__group2{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.contact__input{
+  padding: 12px 16px;
+  border-radius: 12px;
+  outline: none;
+  gap: 24px;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 1rem;
+  font-family: 'Mona Sans';
+
+}
+
+.contact__input::placeholder{
+  color: gray;
+  filter: brightness(60%);
 }
 
 
