--- a/src/style.css
+++ b/src/style.css
@@ -626,6 +626,30 @@ body{
   gap: 40px;
 }
 
+.input__group2 .input1{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.input__group2 .input1 label{
+  color: var(--color-blueDark);
+  font-family: 'Mona Sans';
+  font-weight: 600;
+}
+
+.input__group2 .input2{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.input__group2 .input2 label{
+  color: var(--color-blueDark);
+  font-family: 'Mona Sans';
+  font-weight: 600;
+}
+
+
+
 .contact__input{
   padding: 12px 16px;
   border-radius: 12px;
@@ -633,7 +657,7 @@ body{
   gap: 24px;
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.25);
-  color: white;
+  color: var(--color-blueDark);
   font-size: 1rem;
   font-family: 'Mona Sans';
 
@@ -644,7 +668,17 @@ body{
   filter: brightness(60%);
 }
 
-
+.contact__btn{
+  padding: 16px 16px;
+  font-size: 1.1em;
+  font-family: 'Mona Sans';
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 1.8rem;
+  font-weight: bold;
+  background-color: var(--color-rose);
+}
 
 
 
